tests/baselines/reference/project/prologueEmit/amd/prologueEmit.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== globalThisCapture.ts (0 errors) ====
    // Add a lambda to ensure global 'this' capture is triggered
    (()=>this.window);
    
==== __extends.ts (0 errors) ====
    // class inheritance to ensure __extends is emitted
    module m {
        export class base {}
        export class child extends base {}
    }